# Hart

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  Naming-Conventions.txt  README.md  premake5  premake5.bat  premake5.lua  premake5.sh
Hart-Engine/: CMakeLists.txt  Hart-Engine.lua  premake5.lua
Hart-Engine/src/: EntryPoint.hpp  Hart.hpp  HartPch.cpp  HartPch.hpp
Hart-Engine/src/Audio/: AudioManager.cpp  AudioManager.hpp  AudioManagerData.hpp  Music.cpp  Music.hpp  Sound.cpp  Sound.hpp
Hart-Engine/src/Core/: Application.cpp  Application.hpp  Assert.hpp  Base.hpp  Engine.cpp  Engine.hpp  EngineShaders.cpp  EntryPoint.hpp  HartApplication.cpp  HartApplication.hpp  HartPch.cpp  HartPch.hpp  Input.cpp  Input.hpp  InputManager.cpp  InputManager.hpp  KeyCodes.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  MouseCodes.hpp  Scene.cpp  Scene.hpp  Window.cpp  Window.hpp  WindowConfigs.hpp  WindowData.hpp
Hart-Engine/src/EventListeners/: EventListener.hpp
Hart-Engine/src/Events/: Event.cpp  Event.hpp  EventCategory.hpp  EventDispatcher.hpp  EventType.hpp  KeyEvents.hpp  MouseEvents.hpp  WindowEvents.hpp
Hart-Engine/src/Graphics/: BatchRenderer2D.cpp  BatchRenderer2D.hpp  DynamicRenderable2D.cpp  DynamicRenderable2D.hpp  Group.cpp  Group.hpp  Image.cpp  Image.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Layer.cpp  Layer.hpp  ParticleSystem.cpp  ParticleSystem.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderable2D.cpp  Renderable2D.hpp  Renderer2D.cpp  Renderer2D.hpp  Shader.cpp  Shader.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  SimpleRenderer2D.cpp  SimpleRenderer2D.hpp  Sprite.cpp  Sprite.hpp  SpriteSheet.cpp  SpriteSheet.hpp  StaticRenderable2D.cpp  StaticRenderable2D.hpp  StaticSprite.cpp  StaticSprite.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Hart-Engine/src/Graphics/Camera/: DefaultOrthographicCameraController.cpp  DefaultOrthographicCameraController.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  OrthographicCameraController.cpp  OrthographicCameraController.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp
Hart-Engine/src/Graphics/EngineShaders/: CubeShader3D.hpp  EngineShaders.cpp  LineShader2D.hpp  QuadShader2D.hpp  TextShader2D.hpp
Hart-Engine/src/Graphics/Primitives/: Image.cpp  Image.hpp  IndexBuffer.cpp  IndexBuffer.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Shader.cpp  Shader.hpp  ShaderLibrary.cpp  ShaderLibrary.hpp  Texture.cpp  Texture.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Hart-Engine/src/Graphics/Renderer/: Colors.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  RenderCommand.cpp  RenderCommand.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  Renderer2DData.hpp  Renderer3D.cpp  Renderer3D.hpp  Renderer3DData.hpp  Vertices.hpp
Hart-Engine/src/Graphics/buffers/: Buffer.cpp  Buffer.hpp  INFO.md  IndexBuffer.cpp  IndexBuffer.hpp  VertexArray.cpp  VertexArray.hpp
Hart-Engine/src/Inputs/: InputManager.cpp  InputManager.hpp  KeyCodes.hpp  MouseCodes.hpp
Hart-Engine/src/Maths/: Mat4.cpp  Mat4.hpp  MathConstants.hpp  MathFunctions.hpp  Maths.hpp  MathsFunctions.hpp  Random.cpp  Random.hpp  Vec2.cpp  Vec2.hpp  Vec3.cpp  Vec3.hpp  Vec4.cpp  Vec4.hpp
Hart-Engine/src/Utils/: FileManager.cpp  FileManager.hpp  Loggable.cpp  Loggable.hpp  Logger.cpp  Logger.hpp  Random.cpp  Random.hpp  Timer.cpp  Timer.hpp
Sandbox/: CMakeLists.txt  Sandbox.lua  WindowEvents.hpp  premake5.lua
Sandbox/res/: main.txt
Sandbox/res/music/: INFO.txt
Sandbox/res/shaders/: basicFrag.glsl  basicVert.glsl  cameraFrag.glsl  cameraVert.glsl  texWithColFrag.glsl  texWithColVert.glsl  textureFrag.glsl  textureVert.glsl  textureWithColorFrag.glsl  twoTexFrag.glsl
Sandbox/src/: Layer2D.cpp  Layer2D.hpp  Layer3D.cpp  Layer3D.hpp  Sandbox.cpp  SandboxLayer.hpp  main.cpp
cmake/: print.cmake
cmake/presets/: linux.json  windows.json
